--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend
+name: Deploy Monitoring
 
 on:
     push:
@@ -19,7 +19,7 @@ jobs:
                   username: ${{ secrets.DEPLOY_USER }}
                   key: ${{ secrets.DEPLOY_KEY }}
                   script: |
-                      cd ~/backend
+                      cd ~/monitoring
                       git pull
                       docker-compose build
                       docker-compose down --remove-orphans
