--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,58 @@
-name: Deploy Monitoring
+name: Deploy Project (HTTPS)
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
+      - dev
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-            - name: SSH to server and deploy
-              uses: appleboy/ssh-action@v0.1.6
-              with:
-                  host: ${{ secrets.DEPLOY_HOST }}
-                  username: ${{ secrets.DEPLOY_USER }}
-                  key: ${{ secrets.DEPLOY_KEY }} # приватный ключ сервера
-                  script: |
-                      export GIT_SSH_COMMAND='ssh -i ~/.ssh/id_ed25519_trava -o StrictHostKeyChecking=no'
-                      REPO_DIR="$HOME/monitoring"
-                      REPO_URL="git@github.com:TravaZelenee/monitoring.git"
+      - name: Определение переменных проекта
+        run: |
+          REPO_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
+          BRANCH_NAME=$(echo $GITHUB_REF_NAME | tr '[:upper:]' '[:lower:]')
+          REPO_DIR="/home/${{ secrets.DEPLOY_USER }}/projects/$REPO_NAME/$BRANCH_NAME"
+          IMAGE_NAME="${REPO_NAME}_${BRANCH_NAME}_image"
+          CONTAINER_NAME="${BRANCH_NAME}_${REPO_NAME}"
 
-                      if [ ! -d "$REPO_DIR/.git" ]; then
-                        echo "Repository not found. Cloning..."
-                        rm -rf "$REPO_DIR"
-                        git clone "$REPO_URL" "$REPO_DIR"
-                      fi
+          echo "REPO_DIR=$REPO_DIR" >> $GITHUB_ENV
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "CONTAINER_NAME=$CONTAINER_NAME" >> $GITHUB_ENV
+        env:
+          REMOTE_USER: ${{ secrets.DEPLOY_USER }}
 
-                      cd "$REPO_DIR"
-                      git pull
+      - name: Клонирование/обновление репозитория
+        run: |
+          ssh ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} "
+            if [ ! -d '$REPO_DIR/.git' ]; then
+              echo 'Клонируем репозиторий через HTTPS...'
+              mkdir -p $(dirname $REPO_DIR)
+              git clone https://$GITHUB_ACTOR:${{ secrets.GH_TOKEN }}@github.com/$GITHUB_REPOSITORY.git $REPO_DIR
+            else
+              echo 'Обновляем репозиторий...'
+              cd $REPO_DIR
+              git fetch origin
+              git checkout $GITHUB_REF_NAME
+              git pull origin $GITHUB_REF_NAME
+            fi
+          "
+        env:
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+          REMOTE_USER: ${{ secrets.DEPLOY_USER }}
+          REMOTE_HOST: ${{ secrets.DEPLOY_HOST }}
 
-                      docker-compose down --remove-orphans
-                      docker-compose pull
-                      docker-compose up -d
+      - name: Запуск Docker Compose
+        run: |
+          ssh ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} "
+            cd $REPO_DIR
+            docker-compose down --remove-orphans
+            docker-compose up -d --build
+          "
