--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
           IMAGE_NAME="${REPO_NAME}_${BRANCH_NAME}_image"
           CONTAINER_NAME="${BRANCH_NAME}_${REPO_NAME}"  
-          REPO_DIR="/home/$REMOTE_USER/projects/$REPO_NAME/$BRANCH_NAME"
+          REPO_DIR="/home/${REMOTE_USER}/projects/${REPO_NAME}/${BRANCH_NAME}"
 
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           echo "REPO_DIR=$REPO_DIR" >> $GITHUB_ENV
