--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - ./loki/loki-config.yml:/etc/loki/config.yml:ro
       - ./volumes/loki:/loki
     command: -config.file=/etc/loki/config.yml
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3100/ready"]
+      interval: 5s
+      retries: 5
 
   promtail:
     image: grafana/promtail:2.9.0
@@ -23,7 +27,7 @@ services:
     command: -config.file=/etc/promtail/config.yml
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:10.0.3
     container_name: grafana
     restart: always
     ports:
@@ -32,7 +36,8 @@ services:
       - ./volumes/grafana:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
-      - loki
+      loki:
+        condition: service_healthy
 
   dozzle:
     image: amir20/dozzle:latest
