--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:3100/ready"]
       interval: 5s
-      retries: 5
+      timeout: 3s
+      retries: 10
 
   promtail:
     image: grafana/promtail:2.9.0
